# shadowvic

./: Makefile.am  README.md  configure.ac  gen-examples.lisp  make.sh
examples/: Makefile.am  arukanoido.c  make-test.lisp  make-test.sh  panicman  panicman.c  picovic.c  pulse.c  tests.asm  tests.bin.c  tests.c
include/: shadowvic.h
src/: 6502-instructions.c  6502.c  6502.h  6561.c  6561.h  Makefile.am  basic.c  chargen.c  commands.c  commands.h  config.h  debugger.c  debugger.h  disassembler.c  disassembler.h  fb.c  instruction-map.c  joystick.c  joystick.h  kernal.c  linenoise.lo  main.c  opcode-map.c  palette.c  prg-loader.c  prg-loader.h  pulse.c  rom-labels.c  shadowvic.h  sync.c  sync.h  types.h  via.c  via.h  via.lo  vic-20.c  video.c  video.h
