bin_PROGRAMS = tests pulse picovic

tests_SOURCES = tests.c
tests_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include
tests_LDADD = ../src/libshadowvic.la

pulse_SOURCES = pulse.c
pulse_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include
pulse_LDADD = ../src/libshadowvic.la

picovic_SOURCES = picovic.c
picovic_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include
picovic_LDADD = ../src/libshadowvic.la
