bin_PROGRAMS = tests picovic arukanoido panicman pulse

tests_SOURCES = tests.c
tests_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include
tests_LDADD = ../src/libshadowvic.la

picovic_SOURCES = picovic.c
picovic_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include
picovic_LDADD = ../src/libshadowvic.la

arukanoido_SOURCES = arukanoido.c
arukanoido_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include
arukanoido_LDADD = ../src/libshadowvic.la

panicman_SOURCES = panicman.c
panicman_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include
panicman_LDADD = ../src/libshadowvic.la

pulse_SOURCES = pulse.c
pulse_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include
pulse_LDADD = ../src/libshadowvic.la
