lib_LTLIBRARIES = libshadowvic.la
libshadowvic_la_SOURCES = 6502.c 6561.c debugger.c disassembler.c fb.c joystick.c linenoise.c sync.c via.c vic-20.c video.c
otherincludedir = $(includedir)/shadowvic
otherinclude_HEADERS = types.h 6502.h 6561.h debugger.h disassembler.h joystick.h sync.h video.h shadowvic.h
